codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__questions_open_on_arrival.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 21
expression: "render_bottom_popup(&chat, 80)"
---
• Working (0s • esc to interrupt)

• Queued follow-up inputs

  1 of 2

  Which way?

  Type your answer

  enter submit   ctrl+] skip   ⌥+↓ main prompt   ⌥+↑ next question
