codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__questions_with_status_and_queue.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 612
expression: "format!(\"OPEN\\n{open}\\n\\nONLY QUESTIONS\\n{completed}\")"
---
OPEN
• Working (0s • esc to interrupt)

• Queued follow-up inputs
  ↳ queued follow-up

ONLY QUESTIONS
• Queued follow-up inputs
  ? 2 questions
    shift+← to answer
